--- a/css/wysiwyg-styles.css
+++ b/css/wysiwyg-styles.css
@@ -300,6 +300,11 @@ div.tadv-error {
 }
 
 .tadv-error {
-	color: #d58621;
+	color: #d54e21;
 	font-weight: bold;
 }
+.tadv-notice {
+	color: #00a0d2;
+	font-weight: bold;
+}
+
